[workspace]
members = [
    "server",
    "client",
    "protocol",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rand = "0.8"
ed25519-dalek = { version = "2.1", features = ["serde"] }
x25519-dalek = { version = "2.0", features = ["serde"] }
chacha20poly1305 = "0.10"