[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
protocol = { path = "../protocol" }
tokio = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
rand = { workspace = true }
rpassword = "7.3"