[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
bincode = { workspace = true }
crc32fast = "1.4"
tokio = { workspace = true }
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
chacha20poly1305 = { workspace = true }
rand = { workspace = true }