[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
protocol = { path = "../protocol" }
tokio = { workspace = true }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid"] }
bincode = { workspace = true }
dotenv = "0.15"
uuid = { version = "1", features = ["v4"] }
ed25519-dalek = { workspace = true }
rand = { workspace = true }